# storage/api-docs/api-docs.json
@@ -558,6 +558,54 @@
                 ]
             }
         },
+        "/concerts/user/{userId}": {
+            "get": {
+                "tags": [
+                    "Concert"
+                ],
+                "summary": "Get concert objects by userId",
+                "operationId": "0b7c3bbd7f50a819425efd26fc6cfc97",
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "path",
+                        "description": "ID of the user",
+                        "required": true
+                    },
+                    {
+                        "name": "eventType",
+                        "in": "query",
+                        "description": "Available values: 'upcoming|past|all'. Defaultly is 'all'"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ConcertIndexResource"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/users/me": {
             "get": {
                 "tags": [
